<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="radio_button_text_1">Glide</string>
    <string name="radio_button_text_2">Project</string>
    <string name="radio_button_text_3">Retrofit</string>

    <string name="radio_button_link_1">https://github.com/bumptech/glide</string>
    <string name="radio_button_link_2">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
    <string name="radio_button_link_3">https://github.com/square/retrofit</string>
    <string name="file_name_label">File Name:</string>
    <string name="file_name">File Name</string>
    <string name="status">Status</string>
    <string name="status_label">Status:</string>
</resources>
